[package]
name = "cloudflare-dns-http-3"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.0"
h3 = "0.0.6"
h3-quinn = "0.0.7"
http = "1.2.0"
quinn = "0.11.6"
rustls = "0.23.23"
rustls-platform-verifier = "0.5.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
